# gen_ai_robot_pendulum

./: .gitignore  1-requirements.md  2-mcu-comparison.md  3-gpio-mapping.md  4-stlink-vcp-interface.md  README.md  mb1292b-controller.md  plan.md
.claude/: settings.json  settings.local.json
BLE_Sensor/Debug/: BLE_Sensor.elf  BLE_Sensor.list  BLE_Sensor.map  makefile  sources.mk
BLE_Sensor/Debug/Utilities/: stm32_lcd.cyclo  stm32_lcd.d  stm32_lcd.su  stm32_lpm.cyclo  stm32_lpm.d  stm32_lpm.su  stm32_seq.cyclo  stm32_seq.d  stm32_seq.su  subdir.mk
app-pc-monitor/: app-pc-monitor.md  main.py  pyproject.toml
app-pc-monitor/monitor/export/: csv_export.py  png_export.py
app-pc-monitor/monitor/model/: parameters.py  ring_buffer.py  session.py  telemetry.py
app-pc-monitor/monitor/serial/: port_scanner.py  protocol.py  reader_thread.py
app-pc-monitor/monitor/ui/: capture_panel.py  commands_panel.py  faults_panel.py  log_panel.py  main_window.py  parameters_panel.py  telemetry_panel.py  toolbar.py
app-pc-monitor/robot_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app-pc-monitor/tests/: test_parameters.py  test_protocol.py  test_ring_buffer.py  test_telemetry.py
mb1292b-controller/: .cproject  .project  CMakeLists.txt
mb1292b-controller/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  controler.elf  test.map
mb1292b-controller/Startup/: startup_stm32wb5mmghx.s
parts/: arduino_motor_shield_rev3.md  battery.md  mb1292b.md  motors-encoders.md  mpu-6050.md  wheel.md
(+707 files in other folders)
